tests/bad/bad15.tig
let
  type a = array of int
  var x := a[3] of 42
  var i := 0
in
  while i <= 3 do (
    print_int(x[i]);
    i := i + 1
  )
end
